4B/cs444/tests/site/pass/pass_char.joos
/* pass: char */
public class A {
  public A() {}
  protected char x;
}

