4B/cs444/tests/site/fail/fail_double.joos
/* fail: double */
public class A {
  protected double x;
}

